Address code review: cache measurements, refresh tables on tolerance change
Co-authored-by: arsi-apli <22594510+arsi-apli@users.noreply.github.com>